project(mylibgenesis)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(/home/giannis/Desktop/binder/source)
include_directories(./../lib)
include_directories(/usr/include/pybind11)
include_directories(/usr/include/python3.10)
set_property(GLOBAL PROPERTY POSITION_INDEPENDENT_CODE ON)
add_definitions(-DNDEBUG)
add_library(mylibgenesis SHARED
	mylibgenesis.cpp
	std/type_traits.cpp
	std/stl_iterator_base_types.cpp
	std/exception.cpp
	bits/types/struct_FILE.cpp
	std/stdexcept.cpp
	std/locale_classes.cpp
	std/basic_ios_tcc.cpp
	std/istream_tcc.cpp
	std/fstream_tcc.cpp
	std/random.cpp
	genesis/utils/math/bitvector.cpp
	std/genesis/utils/math/bitvector.cpp
	genesis/utils/math/bitvector/helper.cpp
	genesis/utils/color/functions.cpp
	genesis/utils/containers/range.cpp
	genesis/utils/containers/matrix.cpp
	genesis/utils/containers/matrix_1.cpp
	genesis/utils/containers/matrix_2.cpp
	genesis/utils/tools/char_lookup.cpp
	genesis/utils/core/logging.cpp
	genesis/utils/core/fs.cpp
	genesis/utils/io/input_source.cpp
	genesis/utils/text/string.cpp
	genesis/utils/text/string_1.cpp
	genesis/utils/io/base_output_target.cpp
	genesis/utils/io/gzip_output_target.cpp
	genesis/utils/color/names.cpp
	genesis/utils/tools/tickmarks.cpp
	genesis/utils/formats/svg/helper.cpp
	genesis/utils/formats/svg/attributes.cpp
	genesis/utils/formats/svg/group.cpp
	genesis/utils/formats/svg/color_bar.cpp
	genesis/utils/formats/svg/shapes.cpp
	genesis/utils/formats/svg/shapes_1.cpp
	genesis/utils/formats/nexus/writer.cpp
	genesis/utils/math/statistics.cpp
	genesis/utils/math/statistics_1.cpp
	genesis/utils/math/matrix.cpp
	__/python/custom_bindings/template_instances/matrix.cpp
	genesis/sequence/functions/codes.cpp
	genesis/sequence/counts.cpp
	genesis/sequence/formats/phylip_reader.cpp
	genesis/sequence/functions/consensus.cpp
	genesis/sequence/functions/consensus_1.cpp
	genesis/sequence/reference_genome.cpp
	genesis/sequence/functions/dict.cpp
	genesis/sequence/functions/functions.cpp
	genesis/sequence/functions/functions_1.cpp
	genesis/sequence/functions/quality.cpp
	genesis/sequence/formats/fastq_writer.cpp
	genesis/sequence/functions/stats.cpp
	genesis/sequence/functions/labels.cpp
	genesis/sequence/functions/signatures.cpp
	genesis/sequence/functions/signatures_1.cpp
	genesis/taxonomy/formats/taxopath_parser.cpp
	genesis/taxonomy/taxonomy.cpp
	genesis/taxonomy/functions/taxonomy.cpp
	std/genesis/taxonomy/taxopath.cpp
	genesis/taxonomy/printers/nested.cpp
	genesis/taxonomy/iterator/preorder.cpp
	genesis/tree/tree/link.cpp
	genesis/tree/tree.cpp
	genesis/tree/common_tree/tree.cpp
	genesis/tree/common_tree/newick_reader.cpp
	genesis/tree/function/functions.cpp
	genesis/taxonomy/functions/tree.cpp
	genesis/tree/drawing/layout_tree.cpp
	genesis/tree/drawing/heat_tree.cpp
	genesis/tree/common_tree/functions.cpp
	genesis/tree/function/manipulation.cpp
	genesis/tree/function/operators.cpp
	genesis/tree/mass_tree/balances.cpp
	genesis/tree/mass_tree/phylo_ilr.cpp
	genesis/tree/common_tree/newick_writer.cpp
	genesis/tree/formats/newick/input_iterator.cpp
	genesis/tree/attribute_tree/tree.cpp
	genesis/tree/attribute_tree/keyed_newick_reader.cpp
	genesis/tree/bipartition/rf.cpp
	genesis/tree/iterator/path.cpp
	__/python/custom_bindings/template_instances/path.cpp
	genesis/tree/iterator/path_set.cpp
	__/python/custom_bindings/template_instances/path_set.cpp
	genesis/placement/formats/jplace_reader.cpp
	genesis/placement/sample.cpp
	genesis/placement/function/functions.cpp
	genesis/placement/function/functions_1.cpp
	genesis/placement/pquery/plain.cpp
	__/python/custom_bindings/template_instances/range.cpp
	genesis/placement/formats/jplace_writer.cpp
	genesis/placement/function/nhd.cpp
	genesis/placement/function/epca.cpp
	genesis/placement/function/operators.cpp
	genesis/placement/simulator/distributions.cpp
)
target_link_libraries(mylibgenesis PUBLIC /home/giannis/Desktop/genesis/bin/libgenesis.so )
set_target_properties(mylibgenesis PROPERTIES PREFIX "")
set_target_properties(mylibgenesis PROPERTIES SUFFIX ".so")
